--- a/style/style.css
+++ b/style/style.css
@@ -165,6 +165,36 @@ p {
     color: var(--clr-primary-1);
     background: var(--clr-primary-8);
 }
+/* section add to globals */
+section{
+    padding: 4rem 0;
+    max-width: 1170px;
+
+}
+/* title add to globals */
+
+.about-heading{
+    text-align: center;
+
+}
+.about-heading h2{
+    text-transform: uppercase;
+
+}
+.about-heading span{
+    color: var(--clr-primary-5);
+}
+/* section center add to globals */
+.section-center {
+    width: 85vw;
+    margin: 0 auto;
+}
+@media screen and (min-width: 1080px) {
+    .section-center{
+        width: 90vw;
+
+    }
+}
 
 /*
 ===============
@@ -248,10 +278,53 @@ Hero
 About
 ===============
 */
+.about-image, .about-info{
+    margin-bottom: 1.5rem;
 
-/* section add to globals */
-/* title add to globals */
-/* section center add to globals */
+}
+
+
+@media screen and (min-width: 992px){
+    .about-center{
+        display: flex;
+        justify-content: space-between;
+    }
+    .about-image, .about-info {
+        flex: 0 0 calc(50% - 2rem);
+        align-self: center;
+        margin-bottom: 0;
+
+    }
+    .about-heading{
+        margin-bottom: 5rem;
+
+    }
+    .about-heading h2{
+        margin-bottom: 2rem;
+
+    }
+    .about-image{
+        position: relative;
+    }
+    .about-image::before{
+        content: "";
+        position: absolute;
+
+        display: inline-block;
+        border: solid 10px  var(--clr-grey-5);
+        width: 100%;
+        height: 100%;
+        /*z-index: -1;*/
+        top: -2rem;
+        left: -2rem;
+
+    }
+    .image-photo-about{
+        position: relative;
+        /*ini adalah cara lain membuat z index content before menjadi di bleakang image karena gambar sudah kebali menjadi relative*/
+    }
+
+}
 
 /*
 ===============
