--- a/style/style.css
+++ b/style/style.css
@@ -168,7 +168,6 @@ p {
 /* section add to globals */
 section{
     padding: 4rem 0;
-    max-width: 1170px;
 
 }
 /* title add to globals */
@@ -188,6 +187,8 @@ section{
 .section-center {
     width: 85vw;
     margin: 0 auto;
+    max-width: 1170px;
+
 }
 @media screen and (min-width: 1080px) {
     .section-center{
@@ -331,6 +332,44 @@ About
 Services
 ===============
 */
+.bgr-services{
+    background-color: var(--clr-grey-10);
+}
+.services-item{
+    text-align: center;
+}
+.service-icon{
+    display: inline-block;
+    font-size: 2rem;
+    background-color: var(--clr-primary-4);
+    padding: 15px;
+    margin-bottom: 0.75rem;
+    color: white;
+}
+@media screen and (min-width: 560px) {
+    .services{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .services-item{
+
+        flex: 0 0 calc(50% - 1rem);
+    }
+
+
+}@media screen and (min-width: 992px) {
+    .services-item{
+        display: flex;
+        flex: 0 0 calc(33.33% - 1rem);
+        text-align: left;
+    }
+    .service-icon{
+align-self: start;
+        margin-right: 20px;
+    }
+}
+
 
 /*
 ===============
