--- a/style/style.css
+++ b/style/style.css
@@ -12,38 +12,38 @@ Variables
 */
 
 :root {
-    /* dark shades of primary color*/
-    --clr-primary-1: hsl(184, 91%, 17%);
-    --clr-primary-2: hsl(185, 84%, 25%);
-    --clr-primary-3: hsl(185, 81%, 29%);
-    --clr-primary-4: hsl(184, 77%, 34%);
-    /* primary/main color */
-    --clr-primary-5: hsl(185, 62%, 45%);
-    /* lighter shades of primary color */
-    --clr-primary-6: hsl(185, 57%, 50%);
-    --clr-primary-7: hsl(184, 65%, 59%);
-    --clr-primary-8: hsl(184, 80%, 74%);
-    --clr-primary-9: hsl(185, 94%, 87%);
-    --clr-primary-10: hsl(186, 100%, 94%);
-    /* darkest grey - used for headings */
-    --clr-grey-1: hsl(209, 61%, 16%);
-    --clr-grey-2: hsl(211, 39%, 23%);
-    --clr-grey-3: hsl(209, 34%, 30%);
-    --clr-grey-4: hsl(209, 28%, 39%);
-    /* grey used for paragraphs */
-    --clr-grey-5: hsl(210, 22%, 49%);
-    --clr-grey-6: hsl(209, 23%, 60%);
-    --clr-grey-7: hsl(211, 27%, 70%);
-    --clr-grey-8: hsl(210, 31%, 80%);
-    --clr-grey-9: hsl(212, 33%, 89%);
-    --clr-grey-10: hsl(210, 36%, 96%);
-    --clr-white: #fff;
-    --ff-primary: "Lato", sans-serif;
-    --transition: all 0.3s linear;
-    --spacing: 0.25rem;
-    --radius: 0.5rem;
-    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  /* dark shades of primary color*/
+  --clr-primary-1: hsl(184, 91%, 17%);
+  --clr-primary-2: hsl(185, 84%, 25%);
+  --clr-primary-3: hsl(185, 81%, 29%);
+  --clr-primary-4: hsl(184, 77%, 34%);
+  /* primary/main color */
+  --clr-primary-5: hsl(185, 62%, 45%);
+  /* lighter shades of primary color */
+  --clr-primary-6: hsl(185, 57%, 50%);
+  --clr-primary-7: hsl(184, 65%, 59%);
+  --clr-primary-8: hsl(184, 80%, 74%);
+  --clr-primary-9: hsl(185, 94%, 87%);
+  --clr-primary-10: hsl(186, 100%, 94%);
+  /* darkest grey - used for headings */
+  --clr-grey-1: hsl(209, 61%, 16%);
+  --clr-grey-2: hsl(211, 39%, 23%);
+  --clr-grey-3: hsl(209, 34%, 30%);
+  --clr-grey-4: hsl(209, 28%, 39%);
+  /* grey used for paragraphs */
+  --clr-grey-5: hsl(210, 22%, 49%);
+  --clr-grey-6: hsl(209, 23%, 60%);
+  --clr-grey-7: hsl(211, 27%, 70%);
+  --clr-grey-8: hsl(210, 31%, 80%);
+  --clr-grey-9: hsl(212, 33%, 89%);
+  --clr-grey-10: hsl(210, 36%, 96%);
+  --clr-white: #fff;
+  --ff-primary: "Lato", sans-serif;
+  --transition: all 0.3s linear;
+  --spacing: 0.25rem;
+  --radius: 0.5rem;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 /*
@@ -53,30 +53,30 @@ Global Styles
 */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: var(--ff-primary);
-    background: var(--clr-white);
-    color: var(--clr-grey-1);
-    line-height: 1.5;
-    font-size: 0.875rem;
+  font-family: var(--ff-primary);
+  background: var(--clr-white);
+  color: var(--clr-grey-1);
+  line-height: 1.5;
+  font-size: 0.875rem;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 img {
-    width: 100%;
-    display: block;
+  width: 100%;
+  display: block;
 }
 
 /* img:not(.nav-logo) {
@@ -88,113 +88,108 @@ h1,
 h2,
 h3,
 h4 {
-    letter-spacing: var(--spacing);
-    text-transform: capitalize;
-    line-height: 1.25;
-    margin-bottom: 0.75rem;
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
 }
 
 h1 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 h2 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 h3 {
-    font-size: 1.25rem;
+  font-size: 1.25rem;
 }
 
 h4 {
-    font-size: 0.875rem;
+  font-size: 0.875rem;
 }
 
 p {
-    margin-bottom: 1.25rem;
-    color: var(--clr-grey-5);
+  margin-bottom: 1.25rem;
+  color: var(--clr-grey-5);
 }
 
 @media screen and (min-width: 800px) {
-    h1 {
-        font-size: 4rem;
-    }
+  h1 {
+    font-size: 4rem;
+  }
 
-    h2 {
-        font-size: 2.5rem;
-    }
+  h2 {
+    font-size: 2.5rem;
+  }
 
-    h3 {
-        font-size: 1.75rem;
-    }
+  h3 {
+    font-size: 1.75rem;
+  }
 
-    h4 {
-        font-size: 1rem;
-    }
+  h4 {
+    font-size: 1rem;
+  }
 
-    body {
-        font-size: 1rem;
-    }
+  body {
+    font-size: 1rem;
+  }
 
-    h1,
-    h2,
-    h3,
-    h4 {
-        line-height: 1;
-    }
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1;
+  }
 }
 
 /*  global classes */
 
 .btn {
-    text-transform: uppercase;
-    background: var(--clr-primary-5);
-    color: var(--clr-white);
-    padding: 0.375rem 0.75rem;
-    letter-spacing: var(--spacing);
-    display: inline-block;
-    /* font-weight: 700; */
-    transition: var(--transition);
-    font-size: 0.875rem;
-    border: 2px solid transparent;
-    cursor: pointer;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  text-transform: uppercase;
+  background: var(--clr-primary-5);
+  color: var(--clr-white);
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  /* font-weight: 700; */
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid transparent;
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 .btn:hover {
-    color: var(--clr-primary-1);
-    background: var(--clr-primary-8);
+  color: var(--clr-primary-1);
+  background: var(--clr-primary-8);
 }
 /* section add to globals */
-section{
-    padding: 4rem 0;
-
+section {
+  padding: 4rem 0;
 }
 /* title add to globals */
 
-.section-title{
-    text-align: center;
-
+.section-title {
+  text-align: center;
 }
-.section-title h2{
-    text-transform: uppercase;
-
+.section-title h2 {
+  text-transform: uppercase;
 }
-.section-title span{
-    color: var(--clr-primary-5);
+.section-title span {
+  color: var(--clr-primary-5);
 }
 /* section center add to globals */
 .section-center {
-    width: 85vw;
-    margin: 0 auto;
-    max-width: 1170px;
-
+  width: 85vw;
+  margin: 0 auto;
+  max-width: 1170px;
 }
 @media screen and (min-width: 1080px) {
-    .section-center{
-        width: 90vw;
-
-    }
+  .section-center {
+    width: 90vw;
+  }
 }
 
 /*
@@ -208,70 +203,70 @@ Hero
 ===============
 */
 .banner {
-    height: 100vh;
-    background: var(--clr-primary-1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  background: var(--clr-primary-1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .banner-container {
-    text-align: center;
-    max-width: 35rem;
+  text-align: center;
+  max-width: 35rem;
 }
 
 .banner-container h1 {
-    font-size: 1.5rem;
-    color: var(--clr-white);
-    text-transform: uppercase;
+  font-size: 1.5rem;
+  color: var(--clr-white);
+  text-transform: uppercase;
 }
 
 .banner-container p {
-    color: var(--clr-white);
-    margin-bottom: 2rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+  color: var(--clr-white);
+  margin-bottom: 2rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .hero-btn {
-    font-size: 1rem;
-    font-weight: 700;
+  font-size: 1rem;
+  font-weight: 700;
 }
 
 .hero-btn:hover {
-    border-color: white;
-    background-color: transparent;
-    color: white;
+  border-color: white;
+  background-color: transparent;
+  color: white;
 }
 
 @media screen and (min-width: 425px) {
-    .banner {
-        background: linear-gradient(
-                0deg,
-                rgba(2, 0, 36, 0.4) 0%,
-                rgba(9, 9, 121, 0.4) 100%
-        ),
-        url("../images/main.jpg") center/cover;
-    }
+  .banner {
+    background: linear-gradient(
+        0deg,
+        rgba(2, 0, 36, 0.4) 0%,
+        rgba(9, 9, 121, 0.4) 100%
+      ),
+      url("../images/main.jpg") center/cover;
+  }
 
-    .banner-container {
-        max-width: 45rem;
-        padding: 0;
-    }
+  .banner-container {
+    max-width: 45rem;
+    padding: 0;
+  }
 
-    .banner-container h1 {
-        font-size: 4rem;
-    }
+  .banner-container h1 {
+    font-size: 4rem;
+  }
 
-    .hero-btn {
-        font-size: 1.5rem;
-        font-weight: 700;
-    }
+  .hero-btn {
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
 
-    .banner-container p {
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
-    }
+  .banner-container p {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
 }
 
 /*
@@ -279,52 +274,47 @@ Hero
 About
 ===============
 */
-.about-image, .about-info{
-    margin-bottom: 1.5rem;
-
+.about-image,
+.about-info {
+  margin-bottom: 1.5rem;
 }
 
+@media screen and (min-width: 992px) {
+  .about-center {
+    display: flex;
+    justify-content: space-around;
+  }
+  .about-image,
+  .about-info {
+    flex: 0 0 calc(50% - 2rem);
+    align-self: center;
+    margin-bottom: 0;
+  }
+  .section-title {
+    margin-bottom: 5rem;
+  }
+  .section-title h2 {
+    margin-bottom: 2rem;
+  }
+  .about-image {
+    position: relative;
+  }
+  .about-image::before {
+    content: "";
+    position: absolute;
 
-@media screen and (min-width: 992px){
-    .about-center{
-        display: flex;
-        justify-content: space-around;
-    }
-    .about-image, .about-info {
-        flex: 0 0 calc(50% - 2rem);
-        align-self: center;
-        margin-bottom: 0;
-
-    }
-    .section-title{
-        margin-bottom: 5rem;
-
-    }
-    .section-title h2{
-        margin-bottom: 2rem;
-
-    }
-    .about-image{
-        position: relative;
-    }
-    .about-image::before{
-        content: "";
-        position: absolute;
-
-        display: inline-block;
-        border: solid 10px  var(--clr-grey-5);
-        width: 100%;
-        height: 100%;
-        /*z-index: -1;*/
-        top: -2rem;
-        left: -2rem;
-
-    }
-    .image-photo-about{
-        position: relative;
-        /*ini adalah cara lain membuat z index content before menjadi di bleakang image karena gambar sudah kebali menjadi relative*/
-    }
-
+    display: inline-block;
+    border: solid 10px var(--clr-grey-5);
+    width: 100%;
+    height: 100%;
+    /*z-index: -1;*/
+    top: -2rem;
+    left: -2rem;
+  }
+  .image-photo-about {
+    position: relative;
+    /*ini adalah cara lain membuat z index content before menjadi di bleakang image karena gambar sudah kebali menjadi relative*/
+  }
 }
 
 /*
@@ -332,45 +322,41 @@ About
 Services
 ===============
 */
-.bgr-services{
-    background-color: var(--clr-grey-10);
+.bgr-services {
+  background-color: var(--clr-grey-10);
 }
-.services-item{
-    text-align: center;
+.services-item {
+  text-align: center;
 }
-.service-icon{
-    display: inline-block;
-    font-size: 2rem;
-    background-color: var(--clr-primary-4);
-    padding: 15px;
-    margin-bottom: 0.75rem;
-    color: white;
+.service-icon {
+  display: inline-block;
+  font-size: 2rem;
+  background-color: var(--clr-primary-4);
+  padding: 15px;
+  margin-bottom: 0.75rem;
+  color: white;
 }
 @media screen and (min-width: 560px) {
-    .services{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-    }
-    .services-item{
-
-        flex: 0 0 calc(50% - 1rem);
-    }
-
-
-}@media screen and (min-width: 992px) {
-    .services-item{
-        display: flex;
-        flex: 0 0 calc(33.33% - 1rem);
-        text-align: left;
-    }
-    .service-icon{
-        align-self: start;
-        margin-right: 20px;
-    }
+  .services {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .services-item {
+    flex: 0 0 calc(50% - 1rem);
+  }
 }
-
-
+@media screen and (min-width: 992px) {
+  .services-item {
+    display: flex;
+    flex: 0 0 calc(33.33% - 1rem);
+    text-align: left;
+  }
+  .service-icon {
+    align-self: start;
+    margin-right: 20px;
+  }
+}
 /*
 ===============
 Featured Tours
