--- a/style/style.css
+++ b/style/style.css
@@ -432,7 +432,47 @@ Featured Tours
 Contact
 ===============
 */
+.contact-container {
+  background-color: var(--clr-grey-6);
+}
+.contact-info h3,
+.contact-info p {
+  color: white;
+}
+.contact {
+  padding: 1rem;
+  background-color: var(--clr-grey-2);
+}
+.email-container {
+  display: flex;
+}
+.email-input,
+.btn-contact {
+  padding: 1rem;
+}
+.email-input {
+  width: 100%;
+  max-width: 25rem;
+}
+.btn-contact {
+  background-color: lightgreen;
+  border: none;
+  font-weight: 700;
+  color: var(--clr-grey-2);
+}
 
+@media screen and (min-width: 660px) {
+  .contact {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .email-container {
+    margin-left: 2rem;
+    flex: 1 0 auto;
+    justify-content: center;
+  }
+}
 /*
 ===============
 Gallery
