--- a/style/style.css
+++ b/style/style.css
@@ -478,7 +478,47 @@ Contact
 Gallery
 ===============
 */
+.img-gl-container {
+  background-color: var(--clr-grey-2);
+  height: 17rem;
+  position: relative;
+}
+.icon-gallery {
+  opacity: 0;
+  font-size: 2rem;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transition: var(--transition);
 
+  transform: translate(-50%, -50%);
+}
+.img-gallery {
+  height: 100%;
+  object-fit: cover;
+  transition: var(--transition);
+}
+.img-gl-container:hover .img-gallery {
+  opacity: 0.5;
+}
+.img-gl-container:hover .icon-gallery {
+  opacity: 1;
+}
+@media screen and (min-width: 560px){
+  .fb-gallery{
+    display: flex;
+    flex-wrap: wrap;
+
+  }
+  .img-gl-container{
+    flex: 0 0 50%;
+  }
+}@media screen and (min-width: 992px){
+  .img-gl-container{
+    flex: 0 0 25%;
+  }
+}
 /*
 ===============
 Footer
