--- a/style/style.css
+++ b/style/style.css
@@ -203,6 +203,10 @@ Navbar
 }
 .nav-icons {
   display: none;
+
+}
+.nav-icon:hover{
+  color: var(--clr-primary-3);
 }
 .nav-center {
   width: 100%;
@@ -210,7 +214,7 @@ Navbar
   margin: 0 auto;
 }
 .logo-resto {
-  width: 15rem;
+  width: 13rem;
 }
 .nav-header {
   display: flex;
@@ -251,6 +255,49 @@ Navbar
 .show-links{
   height: 340px;
 }
+@media screen and (min-width: 400px) {
+  .logo-resto{
+    width: 15rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  /*.logo-resto{*/
+  /*  width: 15rem;*/
+  /*}*/
+  .nav-button {
+    display: none;
+  }
+  .nav-center{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav-links{
+    display: flex;
+    height: auto;
+  }
+  .nav-link{
+    text-align: left;
+    padding: 0;
+    margin-right: 1.7rem;
+    font-size: 1.3rem;
+  }
+  .nav-icons{
+    display: flex;
+    font-size: 1.5rem;
+  }
+  .nav-icon{
+    margin: 0 1rem 0 1rem;
+    color: var(--clr-grey-3);
+
+  }
+
+  .nav-link:hover {
+    padding: 0;
+    background-color: transparent;
+    color: var(--clr-primary-5);
+  }
+  }
 /*
 ===============
 Hero
@@ -619,3 +666,4 @@ Footer
 footer p {
   margin-bottom: 0;
 }
+
